--- a/.env
+++ b/.env
@@ -3,3 +3,8 @@ CORS_ORIGIN=*
 #("https://example.com,https://another.com")
 
 MONGODB_URI=mongodb://localhost:27017/
+
+ACCESS_TOKEN_SECERET= thisosa 
+ACCESS_TOKEN_EXPIRY=daskjdbajsd
+REFRESH_TOKEN_SECERET=SDADA
+REFRESH_TOKEN_EXPIRY=ASDASD
