created user auth and registration

--- a/.env
+++ b/.env
@@ -8,3 +8,10 @@ ACCESS_TOKEN_SECERET= thisosa
 ACCESS_TOKEN_EXPIRY=daskjdbajsd
 REFRESH_TOKEN_SECERET=SDADA
 REFRESH_TOKEN_EXPIRY=ASDASD
+
+MAILTRAP_SMTP_HOST=sandbox.smtp.mailtrap.io
+MAILTRAP_SMTP_PORT=2525
+MAILTRAP_SMTP_USER=49d7f4d2854348
+MAILTRAP_SMTP_PASS=42972e4daa4e8e
+
+
