--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ CORS_ORIGIN=*
 
 MONGODB_URI=mongodb://localhost:27017/
 
-ACCESS_TOKEN_SECERET= thisosa 
+ACCESS_TOKEN_SECRET= thisosa 
 ACCESS_TOKEN_EXPIRY=daskjdbajsd
 REFRESH_TOKEN_SECERET=SDADA
 REFRESH_TOKEN_EXPIRY=ASDASD
@@ -15,3 +15,4 @@ MAILTRAP_SMTP_USER=49d7f4d2854348
 MAILTRAP_SMTP_PASS=42972e4daa4e8e
 
 
+EMAIL_FROM=""
