--- a/.env
+++ b/.env
@@ -1,18 +1,17 @@
 PORT=3000
 CORS_ORIGIN=*
-#("https://example.com,https://another.com")
 
 MONGODB_URI=mongodb://localhost:27017/
 
-ACCESS_TOKEN_SECRET= thisosa 
-ACCESS_TOKEN_EXPIRY=daskjdbajsd
-REFRESH_TOKEN_SECERET=SDADA
-REFRESH_TOKEN_EXPIRY=ASDASD
+ACCESS_TOKEN_SECRET=thisisasecretkey
+ACCESS_TOKEN_EXPIRY=15m
+
+REFRESH_TOKEN_SECRET=thisisrefreshsecret
+REFRESH_TOKEN_EXPIRY=7d
 
 MAILTRAP_SMTP_HOST=sandbox.smtp.mailtrap.io
 MAILTRAP_SMTP_PORT=2525
 MAILTRAP_SMTP_USER=49d7f4d2854348
 MAILTRAP_SMTP_PASS=42972e4daa4e8e
-
 
 EMAIL_FROM=""
